VZDEV/src/objects/CCPM_closedLeadChannelSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>CCPM_closedLeadChannelValue__c</fullName>
        <label>Closed Lead Channel Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_closedLeadSourceValues__c</fullName>
        <label>Closed Lead Source Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadStatusValues__c</fullName>
        <label>Lead Status Values</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Closed Lead Channel Setting</label>
    <pluralLabel>Closed Lead Channel Settings</pluralLabel>
</CustomObject>